# raytracer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: CompilerFlags.cmake
src/: main.cc  ray.h  sphere.h  vec3.cpp  vec3.h
